# dnfast

./: .gitignore  BENCHMARK_X86_PROTOCOL.md  CONTRIBUTING.md  Cargo.toml  GROK_X86_HANDOFF.md  IMPORT_PROVENANCE.md  NEXT_X86_HANDOFF.md  README.md  SECURITY.md  START_HERE_X86.md  X86_AGENT_HANDOFF.md  X86_OUT_OF_BAND_BOOTSTRAP_TEMPLATE.md
.copr/: Makefile
.github/workflows/: ci.yml
benchmarks/20260719/daemonless-matrix-9/: summary.tsv
crates/dnfast-cache/: Cargo.toml
crates/dnfast-cache/examples/: artifact_probe.rs
crates/dnfast-cache/src/: artifact.rs  artifact_lock.rs  artifact_store.rs  auxiliary.rs  fs_safety.rs  lib.rs  loading.rs  model.rs  publication.rs  rpmdb_receipt.rs  solv_cache.rs
crates/dnfast-cache/tests/: artifact_cache.rs  artifact_lock_races.rs  artifact_reentrant.rs  artifact_transactions.rs  auxiliary.rs  baseline_compat.rs  behavior.rs  complete_snapshot.rs  public_api.rs  real_fedora_metadata.rs  verified_generation.rs
crates/dnfast-cli/: Cargo.toml
crates/dnfast-cli/src/: args.rs  environment.rs  main.rs  rendering.rs  response.rs
crates/dnfast-cli/src/commands/: advisory.rs  group.rs  history.rs  mod.rs  output.rs  planner.rs  repo.rs
crates/dnfast-cli/tests/: cli.rs  golden.rs  json_contract.rs
crates/dnfast-core/: Cargo.toml
crates/dnfast-dnf5-history/: Cargo.toml
crates/dnfast-executor/: Cargo.toml
crates/dnfast-executor/examples/: mount_swap_probe.rs  provision.rs  recovery_seed.rs
crates/dnfast-executor/src/: compact_inputs.rs  error.rs  execute.rs  input_model.rs  lib.rs  main.rs  mount_root.rs  plan_fd.rs  recovery.rs  resident.rs  root_inputs.rs  root_preparer.rs  root_resolve.rs  staged_inputs.rs  staging.rs
crates/dnfast-executor/src/root_preparer/: prepared_generation.rs  root_state.rs  tests.rs
crates/dnfast-executor/src/root_preparer/prepared_generation/: digest.rs  gc.rs  publication.rs
crates/dnfast-executor/src/root_preparer/tests/: published.rs
crates/dnfast-executor/tests/: cli_json.rs
crates/dnfast-metadata/: Cargo.toml
crates/dnfast-metadata/src/: compression.rs  comps.rs  error.rs  filelists.rs  lib.rs  limits.rs  primary.rs  relations.rs  repomd.rs  search.rs  updateinfo.rs  xml.rs
crates/dnfast-metadata/tests/: complete_records.rs  public_api.rs  regression.rs
crates/dnfast-native/: Cargo.toml
crates/dnfast-native-sys/: Cargo.toml  build.rs
crates/dnfast-native/examples/: checked_journal_probe.rs  inventory.rs  inventory_cache.rs  inventory_gate.rs  metadata_race.rs  probe.rs  production_trust_probe.rs  rpmdb.rs  solve.rs  trust_probe.rs  x86_pool_probe.rs
crates/dnfast-native/src/: checked_transaction.rs  inventory.rs  lib.rs  transaction.rs  trust.rs
crates/dnfast-native/tests/: mapped_file_selector.rs  module_excludes.rs  modulemd.rs  solv_cache.rs  transaction_bridge.rs  x86_pool_probe_contract.rs
crates/dnfast-planning/: Cargo.toml
crates/dnfast-planning/src/: auxiliary.rs  error.rs  file_provides.rs  fs.rs  lib.rs  model.rs  modulemd.rs  native_xml.rs  publisher.rs  snapshot_store.rs
crates/dnfast-refresh/: Cargo.toml
crates/dnfast-refresh/src/: lib.rs  metalink.rs  mirrorlist.rs  openpgp.rs  orchestrator.rs  repo_lock.rs  source_equivalence_tests.rs  tests.rs  transport.rs  url_policy.rs
crates/dnfast-refresh/tests/: public_api.rs
crates/dnfast-repo/: Cargo.toml
crates/dnfast-solver/: Cargo.toml
crates/dnfast-solver/src/: lib.rs  model.rs  native_adapter.rs  plan.rs  preflight.rs  validation.rs
crates/dnfast-solver/tests/: fixture_integration.rs  graph.rs  plans.rs
crates/dnfast-solver/tests/fixtures/: inventory-reader-fedora44.json  native-build10-app.json
crates/dnfast-solver/tests/golden/: app-dependency.json  obsoletes-multiple.json  remove.json  upgrade.json
crates/dnfast-state/: Cargo.toml
crates/dnfast-state/src/: error.rs  fault.rs  fs.rs  group.rs  lib.rs  log.rs  model.rs  reason.rs  recovery.rs  store.rs
crates/dnfast-state/tests/: fault_recovery.rs  groups.rs  journal.rs  reason_store.rs  reasons.rs
docs/: architecture.md  performance-results-20260716-ko.md  performance-results-20260719.md  public-qemu-matrix.md  safety.md
fixtures/hidden-variable/: hidden.repo
fixtures/malformed/: broken.repo
fixtures/modulemd/: dnfast-upgrade.yaml
fixtures/public-api-consumer/: Cargo.toml
fixtures/public-api-consumer/src/: lib.rs
fixtures/repos/: fedora.repo
fixtures/rpm/: arch-switch-v1.spec  arch-switch.spec  arch.spec  build-in-guest.sh  catalog.tsv  config.spec  noarch.spec  policies.spec  relations.spec  scripts.spec  upgrade-v1.spec  upgrade-v2.spec  vendor-switch-v1.spec  vendor-switch.spec
native/include/: dnfast_native.h
native/src/: actions.c  authority.c  callbacks.c  common.c  decisions.c  executor_fd.c  installed.c  internal.h  inventory.c  inventory_write.c  keyring.c  keyring_identity.c  limits.c  metadata_io.c  modulemd.c  rpm.c  rpm_payload.c  rpm_signature.c  solver.c  solver_cache.c  solver_state.c  transaction.c  transaction_payload_fault.c  transaction_result.c  transaction_run.c
native/tests/: abi_contract.c  fake_missing_queue.c  fake_native.c  header_contract.c  keyring_packet_contract.c  native_probe.c  requested_spec_null_contract.c  rpm_payload_framing.c  rpm_signature_framing.c  rpm_write_holder.c  selector_job_kind_contract.c
packaging/: dnfast.spec  dnfastd.service
tools/: audit-native-symbols.sh  benchmark-daemonless-matrix.sh  build-fixture-repo.sh  check-loc.sh  executor-boundary-probe.c  fedora44-native-build.sh  fedora44-vm-common.sh  install-bootstrap-rpms.sh  make-collision-fixture.sh  modulemd-https-gate.sh  pty-executor-probe.c  pty-fd3-target.c  public-qemu-matrix.sh  supervised-fedora-host-gate.sh  test-executor-qemu.sh  test-install-bootstrap-rpms.sh  test-native-solver.sh  test-rpm-inventory.sh  test-x86-pool-probe-lifecycle.sh  test-x86-pool-probe-publication.sh  test-x86-pool-probe-receipt.sh  todo6-https-qa.sh
tools/tests/: fedora44-vm-contract.sh  fixture-repo-contract.sh  public-qemu-matrix-contract.sh  requested-spec-null-contract.sh  selector-relation-kind-contract.sh
(+654 files in other folders)
