[package]
name = "dnfast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dnfast"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dnfast-cache = { path = "../dnfast-cache" }
dnfast-core = { path = "../dnfast-core" }
dnfast-dnf5-history = { path = "../dnfast-dnf5-history" }
dnfast-executor = { path = "../dnfast-executor" }
dnfast-metadata = { path = "../dnfast-metadata" }
dnfast-native-sys = { path = "../dnfast-native-sys" }
dnfast-native = { path = "../dnfast-native" }
dnfast-planning = { path = "../dnfast-planning" }
dnfast-refresh = { path = "../dnfast-refresh" }
dnfast-repo = { path = "../dnfast-repo" }
dnfast-solver = { path = "../dnfast-solver" }
dnfast-state = { path = "../dnfast-state" }
hex = "0.4"
rustix = { version = "1.1", features = ["fs", "process", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.27"

[dev-dependencies]
hex = "0.4"
sha2 = "0.10"
tempfile = "3.27"

[lints]
workspace = true
