[package]
name = "dnfast-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
hex = "0.4"
quick-xml = "0.41"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
zstd = "0.13"

[lints]
workspace = true
