[package]
name = "dnfast-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dnfast-native-sys = { path = "../dnfast-native-sys" }
dnfast-core = { path = "../dnfast-core" }
dnfast-cache = { path = "../dnfast-cache" }
dnfast-repo = { path = "../dnfast-repo" }
dnfast-state = { path = "../dnfast-state" }
rustix = { version = "1.1", features = ["fs", "process"] }
thiserror = "2"
hex = "0.4"
sha2 = "0.10"

[features]
test-fixtures = []

[[example]]
name = "inventory_gate"
required-features = ["test-fixtures"]

[[example]]
name = "checked_journal_probe"
required-features = ["test-fixtures"]

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
