[package]
name = "dnfast-refresh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dnfast-cache = { path = "../dnfast-cache" }
dnfast-metadata = { path = "../dnfast-metadata" }
hex = "0.4"
quick-xml = "0.41"
rustix = { version = "1.1", features = ["fs", "process"] }
sha2 = "0.11"
sequoia-openpgp = "2.4.1"
ureq = { version = "3.3", default-features = false, features = ["gzip", "platform-verifier", "rustls"] }

[dev-dependencies]
tempfile = "3.27"
zstd = "0.13"

[lints]
workspace = true
