[package]
name = "dnfast-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dnfast-core = { path = "../dnfast-core" }
dnfast-metadata = { path = "../dnfast-metadata" }
dnfast-native = { path = "../dnfast-native" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
