[package]
name = "dnfast-state"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dnfast-core = { path = "../dnfast-core" }
rustix = { version = "1.1", features = ["fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
